hubo cambio de imagenes

--- a/index.html
+++ b/index.html
@@ -273,12 +273,12 @@
       </a>
 
       <a href="images/food-galler-img-2.jpg" class="box">
-         <img src="images/food-galler-img-2.jpg" alt="">
+         <img src="images/pancho combos.jpg" alt="">
          <div class="icon"> <i class="fas fa-plus"></i> </div>
       </a>
 
       <a href="images/food-galler-img-3.jpg" class="box">
-         <img src="images/food-galler-img-3.jpg" alt="">
+         <img src="images/madre tierra.jpg" alt="">
          <div class="icon"> <i class="fas fa-plus"></i> </div>
       </a>
 
