reacomode las imagenes

--- a/index.html
+++ b/index.html
@@ -272,12 +272,12 @@
          <div class="icon"> <i class="fas fa-plus"></i> </div>
       </a>
 
-      <a href="images/food-galler-img-2.jpg" class="box">
+      <a href="images/pancho combos.jpg" class="box">
          <img src="images/pancho combos.jpg" alt="">
          <div class="icon"> <i class="fas fa-plus"></i> </div>
       </a>
 
-      <a href="images/food-galler-img-3.jpg" class="box">
+      <a href="images/madre tierra.jpg" class="box">
          <img src="images/madre tierra.jpg" alt="">
          <div class="icon"> <i class="fas fa-plus"></i> </div>
       </a>
