--- a/index.html
+++ b/index.html
@@ -726,14 +726,14 @@
       <div class="icons">
          <i class="fas fa-envelope"></i>
          <h3>email</h3>
-         <p>shaikhanas@gmail.com</p>
-         <p>anasbhai@gmail.com</p>
+         <p>gyostin604@gmail.com</p>
+         <p>leonardo2322@gmail.com</p>
       </div>
 
       <div class="icons">
          <i class="fas fa-map"></i>
          <h3>Direccion</h3>
-         <p>mumbai, india - 400104</p>
+         <p>colombia, envigado - 553211</p>
       </div>
 
    </div>
