--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
 
    <div class="gallery-container">
 
-      <a href="images/food-galler-img-1.jpg" class="box">
-         <img src="images/food-galler-img-1.jpg" alt="">
+      <video src="images/Intro binance.mp4" controls width="250" height="300" class="box">
+         <video src="images/Intro binance.mp4" controls autoplay></video>
          <div class="icon"> <i class="fas fa-plus"></i> </div>
-      </a>
+      </video>
 
       <a href="images/pancho combos.jpg" class="box">
          <img src="images/pancho combos.jpg" alt="">
