--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, hic!</p>
       <div class="price">$49.99</div>
-      <a href="#" class="btn">Comprar Ahora</a>
+      <a href="#" class="btn">Comprar Ahoras</a>
    </div>
 
    <div class="food-preview" data-target="food-5">
@@ -268,7 +268,7 @@
    <div class="gallery-container">
 
       <video src="images/Intro binance.mp4" controls width="250" height="300" class="box">
-         <video src="images/Intro binance.mp4" controls autoplay></video>
+         <video src="images/Intro binance.mp4" controls></video>
          <div class="icon"> <i class="fas fa-plus"></i> </div>
       </video>
 
