--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, hic!</p>
       <div class="price">$49.99</div>
-      <a href="#" class="btn">Comprar Ahoras</a>
+      <a href="#" class="btn">Comprar Ahora</a>
    </div>
 
    <div class="food-preview" data-target="food-5">
@@ -267,10 +267,10 @@
 
    <div class="gallery-container">
 
-      <video src="images/Intro binance.mp4" controls width="250" height="300" class="box">
-         <video src="images/Intro binance.mp4" controls></video>
+      <a href="images/food-galler-img-1.jpg" class="box">
+         <img src="images/food-galler-img-1.jpg" alt="">
          <div class="icon"> <i class="fas fa-plus"></i> </div>
-      </video>
+      </a>
 
       <a href="images/pancho combos.jpg" class="box">
          <img src="images/pancho combos.jpg" alt="">
@@ -726,14 +726,14 @@
       <div class="icons">
          <i class="fas fa-envelope"></i>
          <h3>email</h3>
-         <p>gyostin604@gmail.com</p>
-         <p>leonardo2322@gmail.com</p>
+         <p>shaikhanas@gmail.com</p>
+         <p>anasbhai@gmail.com</p>
       </div>
 
       <div class="icons">
          <i class="fas fa-map"></i>
          <h3>Direccion</h3>
-         <p>colombia, envigado - 553211</p>
+         <p>mumbai, india - 400104</p>
       </div>
 
    </div>
